[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_base"
version = "0.15.0"
description = "Shared base abstractions for bt_api plugins"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "cloudQuant", email = "yunjinqi@gmail.com"},
]
dependencies = [
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "websocket-client>=1.6.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "aiohttp>=3.9.0",
    "packaging>=24.0",
    "spdlog>=2.0.0",
    "pytz>=2023.3",
    "python-rapidjson>=1.10",
    "httpx>=0.27.0",
    "pyzmq>=26.0.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "typing-extensions>=4.8.0",
    "eval-type-backport>=0.2.0; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api_py"
Repository = "https://github.com/cloudQuant/bt_api_py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "RUF100",
]
ignore = [
    "E501",
    "N802",
    "N803",
    "N806",
    "B008",  # inject() in defaults is intentional DI pattern
]

[tool.mypy]
python_version = "3.9"
explicit_package_bases = true
warn_return_any = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
